<resources>

    <string name="app_name">r/EmPortugues</string>
    <string name="button_dialog">Visitar</string>
    <string name="dialog_age">(criado há&#160;</string>
    <string name="dialog_comment">&#160;comentário</string>
    <string name="dialog_comments">&#160;comentários</string>
    <string name="dialog_lastweek">&#160;na última semana.</string>
    <string name="dialog_members">&#160;membros até&#160;</string>
    <string name="dialog_moderator">ninguém</string>
    <string name="dialog_moderators">Moderado por&#160;</string>
    <string name="dialog_newline">\n\n</string>
    <string name="dialog_post">&#160;postagem e&#160;</string>
    <string name="dialog_posts">&#160;postagens e&#160;</string>
    <string name="header_activity">Atividade</string>
    <string name="header_age">Criação</string>
    <string name="header_description">Descrição</string>
    <string name="header_icon">Ícone</string>
    <string name="header_members">Membros</string>
    <string name="header_moderators">Moderadores</string>
    <string name="header_name">Subreddit</string>
    <string name="header_nsfw">NSFW</string>
    <string name="menu_github">Código-fonte</string>
    <string name="menu_reddit">Subreddit</string>
    <string name="menu_website">Site</string>
    <string name="progress_dialog_message">Carregando&#8230;</string>
    <string name="progress_dialog_title">Aguarde, por favor.</string>
    <string name="search_hint">Buscar subreddit</string>
    <string name="search_title">Buscar</string>
    <string name="string_internet_connection_not_available">Conecte-se à internet para utilizar este aplicativo.</string>
    <string name="string_some_thing_wrong">Algo deu errado.</string>
    <string name="time_day">&#160;dia).</string>
    <string name="time_days">&#160;dias).</string>
    <string name="time_month">&#160;mês).</string>
    <string name="time_months">&#160;meses).</string>
    <string name="time_today">&#160;poucas horas).</string>
    <string name="time_year">&#160;ano).</string>
    <string name="time_years">&#160;anos).</string>
    <string name="toast_empty">"Nenhum subreddit encontrado."</string>
    <string name="url_github">https://github.com/subreddit-emportugues/aplicativo</string>
    <string name="url_reddit">https://www.reddit.com/r/EmPortugues</string>
    <string name="url_subreddit_icon">https://b.thumbs.redditmedia.com/hiWgtDrja9SM3iHyv_b3dtES28ZBAKTBeJCfrZ03mNM.jpg</string>
    <string name="url_website">https://emportugues.org</string>
    <string name="zero_feminine">Nenhuma</string>
    <string name="zero_masculine">nenhum</string>

</resources>
