<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_reddit"
        android:orderInCategory="100"
        android:title="@string/menu_reddit"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_github"
        android:orderInCategory="100"
        android:title="@string/menu_github"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_site"
        android:orderInCategory="100"
        android:title="@string/menu_website"
        app:showAsAction="never" />
</menu>
