<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvIcon"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/design_default_color_primary"
                    android:padding="3dp"
                    android:text="@string/header_icon"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/design_default_color_primary"
                    android:padding="3dp"
                    android:text="@string/header_name"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/design_default_color_primary"
                    android:gravity="start"
                    android:padding="3dp"
                    android:text="@string/header_description"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvMembers"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/design_default_color_primary"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/header_members"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/design_default_color_primary"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/header_age"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvNSFW"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/design_default_color_primary"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/header_nsfw"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvComments"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/design_default_color_primary"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/header_recent_comments"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvSubmissions"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/design_default_color_primary"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/header_recent_submissions"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvModerators"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/design_default_color_primary"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/header_moderators"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:scrollbars="none"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </LinearLayout>

    </HorizontalScrollView>

</android.support.design.widget.CoordinatorLayout>
